fix: ensure focus state is clearly visible

--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -267,3 +267,6 @@
     )
       border: thin solid
 
+    &:focus-visible
+      outline: 2px solid
+      outline-offset: 2px
